unified admin order API : remove seller ; add delivery address and more
